# codesentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  docker-compose.yml  test_webhook.py  vulnerable.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_payload.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  bc153912b0d9_initial_schema.py
backend/app/: main.py
backend/app/api/: sse.py
backend/app/api/routes/: sse.py  webhooks.py
backend/app/core/: arq_pool.py  config.py  logging.py  middleware.py  pubsub.py
backend/app/db/: base.py  models.py  session.py
backend/app/services/: analysis.py  github_client.py  llm_client.py  static_analysis.py
backend/app/workers/: queue.py
backend/tests/: conftest.py  test_github_client.py  test_live.py  test_llm_client.py  test_middleware.py  test_static_analysis.py  test_webhook.py  test_webhook_integration.py
frontend/: next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/pr/[id]/: page.tsx
frontend/components/dashboard/: backend-health.tsx  pr-list.tsx  sse-monitor.tsx  stats-bar.tsx
frontend/components/ui/: badge.tsx  button.tsx
frontend/lib/: providers.tsx
frontend/styles/: globals.css
